[package]
name = "dwmr-win32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
const-default = {version = "1.0", features = ["derive"]}
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.52"
features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_LibraryLoader",
	"Win32_Graphics_Gdi",
]
