[package]
name = "dwmr-win32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
const-default = {version = "1.0", features = ["derive"]}
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.52"
features = [
	"Foundation_Numerics",
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_Accessibility",
	"Win32_UI_HiDpi",
	"Win32_System_LibraryLoader",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Threading",
	"Win32_System_ProcessStatus",
	"Win32_Graphics_Direct2D",
	"Win32_Graphics_Direct2D_Common",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Gdi",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_DirectWrite",
]
